--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,25 +12,34 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/grid_item_movie_height">
-
-            <ImageView
-                android:id="@+id/detail_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop" />
+            android:layout_height="100dp">
 
             <TextView
                 android:id="@+id/detail_title"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textSize="22sp"
                 android:padding="5dp"
+                android:gravity="center"
                 android:layout_alignParentBottom="true"
                 android:textColor="@android:color/white"
-                android:background="#80000000" />
+                android:background="#008080" />
+
 
         </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/grid_item_movie_height"
+            android:paddingTop="10dp">
+
+            <ImageView
+                android:id="@+id/detail_image"
+                android:layout_width="188dp"
+                android:layout_height="match_parent" />
+        </RelativeLayout>
+
+
 
         <LinearLayout
             android:orientation="vertical"
@@ -112,77 +121,6 @@
                             android:textSize="@dimen/text_size" />
 
                     </LinearLayout>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/detail_trailers_cardview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:visibility="gone">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="20sp"
-                        android:text="@string/trailers"
-                        android:textStyle="bold" />
-
-                    <HorizontalScrollView
-                        android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:layout_marginTop="20dp">
-
-                        <com.linearlistview.LinearListView
-                            android:id="@+id/detail_trailers"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal"
-                            android:divider="?android:dividerHorizontal"
-                            android:showDividers="middle" />
-
-                    </HorizontalScrollView>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/detail_reviews_cardview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:visibility="gone">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="20sp"
-                        android:text="@string/reviews"
-                        android:textStyle="bold" />
-
-                    <com.linearlistview.LinearListView
-                        android:id="@+id/detail_reviews"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:divider="?android:dividerHorizontal"
-                        android:showDividers="middle" />
 
                 </LinearLayout>
 
