adding room, added new menu item, added fav button to detail activity

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/action_sort_by"
-        android:title="@string/action_sort_by"
+        android:title="@string/action_options"
+        android:icon="@drawable/ic_baseline_more_vert_24px"
         app:showAsAction="ifRoom">
         <menu>
             <group android:checkableBehavior="single">
@@ -9,6 +10,8 @@
                     android:title="@string/action_sort_by_popular" />
                 <item android:id="@+id/action_sort_by_top_rated"
                     android:title="@string/action_sort_by_top_rated" />
+                <item android:id="@+id/action_favorites"
+                    android:title="@string/action_favorites" />
             </group>
         </menu>
     </item>
