--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -56,6 +56,12 @@
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/text_size" />
 
+                    <Button
+                        android:id="@+id/button_id"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="@string/mark_favorite" />
+
                 </LinearLayout>
         </RelativeLayout>
 
