--- a/app/src/main/res/layout/item_trailer.xml
+++ b/app/src/main/res/layout/item_trailer.xml
@@ -2,9 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <ImageButton
+
+    <ImageView
+        android:id="@+id/trailer_thumbnail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/thumbnail_item"/>
-
+        android:scaleType="centerCrop" />
 </FrameLayout>
