--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -5,9 +5,9 @@
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/review_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"/>
+        android:layout_marginRight="24dp" />
 
 </FrameLayout>
