--- a/app/src/main/res/layout/item_trailer.xml
+++ b/app/src/main/res/layout/item_trailer.xml
@@ -6,6 +6,8 @@
     <ImageView
         android:id="@+id/trailer_thumbnail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop" />
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp" />
 </FrameLayout>
